only the primary footer shall have a margin-top

--- a/general_website/static/general_website/css/base.scss
+++ b/general_website/static/general_website/css/base.scss
@@ -108,6 +108,9 @@ footer {
     right: 0px;
     margin-top: 3vh;
 }
+blockquote > footer {
+    margin-top: unset;
+}
 .top-nav, .bottom-nav {
     min-height: 7vh;
 }
