set code and code block (pre) color to be paladin pink

--- a/general_website/static/general_website/css/base.scss
+++ b/general_website/static/general_website/css/base.scss
@@ -80,6 +80,9 @@ $modal-header-border-color: $light-color;
 
 $alert-border-width: 5px;
 
+$pre-color: $class-color-paladin !default;
+$code-color: $class-color-paladin !default;
+
 @import "general_website/bootstrap/scss/bootstrap";
 
 // container for primary page content
