--- a/general_website/templates/general_website/chart_information/simulation_type_information_importer.html
+++ b/general_website/templates/general_website/chart_information/simulation_type_information_importer.html
@@ -1,7 +1,7 @@
 {% with simulation_type_name=simulation_type|add:".html" %}
 <div>
     <blockquote class="blockquote">
-        <p class="mb-0 h4">Simulation Type Explanation</p>
+        <p class="mb-0 h4">Chart Explanation</p>
         <footer class="blockquote-footer">What's going on here?</footer>
     </blockquote>
     {% include 'general_website/chart_information/simulation_type/'|add:simulation_type_name %}
