fix a grammar mistake

--- a/general_website/templates/general_website/chart_information/simulation_type/tier_set.html
+++ b/general_website/templates/general_website/chart_information/simulation_type/tier_set.html
@@ -2,7 +2,7 @@
 <h5>Tier Sets</h5>
 <p>This chart shows how much power can be gained by adding Tier Set effects to a profile.</p>
 <p>
-    Uses the tier appropriate
+    It uses the tier appropriate
     <a href="https://github.com/simulationcraft/simc/tree/shadowlands/profiles">SimulationCraft profile</a>.
     If the fight style is neither <code>patchwerk</code> nor <code>castingpatchwerk</code> a tier appropriate
     <a href="https://github.com/Bloodmallet/bloodytools/tree/dev/fallback_profiles">fallback profile</a> is used to
