add chart explanations

--- a/general_website/templates/general_website/chart_information/simulation_type/talents.html
+++ b/general_website/templates/general_website/chart_information/simulation_type/talents.html
@@ -5,9 +5,9 @@
     <a href="#talent-warning">Disclaimer</a> section carefully.
 </p>
 <p>
-    It uses the tier appropriate
+    It uses the "tier appropriate"
     <a href="https://github.com/simulationcraft/simc/tree/shadowlands/profiles">SimulationCraft profile</a>.
-    If the fight style is neither <code>patchwerk</code> nor <code>castingpatchwerk</code> a tier appropriate
+    If the fight style is neither <code>patchwerk</code> nor <code>castingpatchwerk</code> a "tier appropriate"
     <a href="https://github.com/Bloodmallet/bloodytools/tree/dev/fallback_profiles">fallback profile</a> is used to
     improve the data quality. In a custom chart if the creator provided a profile, it replaces the formerly mentioned
     profiles.
@@ -48,3 +48,12 @@
         it is compared to the strongest one.
     </li>
 </ul>
+
+<pre>
+# SimulatonCraft example override
+## set the selected talents to 1102021 
+talents=1102021
+## each number represents the selection for one row
+## 0 means no talent
+## 1-3 are the appropriate talents from left to right
+</pre>
