--- a/general_website/templates/general_website/chart_information/simulation_type/races.html
+++ b/general_website/templates/general_website/chart_information/simulation_type/races.html
@@ -1,1 +1,21 @@
 {% load i18n %}
+<h5>Races</h5>
+<p>
+    This chart shows the impact of Racial abilities.
+</p>
+<p>
+    It uses the "tier appropriate"
+    <a href="https://github.com/simulationcraft/simc/tree/shadowlands/profiles">SimulationCraft profile</a>.
+    If the fight style is neither <code>patchwerk</code> nor <code>castingpatchwerk</code> a "tier appropriate"
+    <a href="https://github.com/Bloodmallet/bloodytools/tree/dev/fallback_profiles">fallback profile</a> is used to
+    improve the data quality. In a custom chart if the creator provided a profile, it replaces the formerly mentioned
+    profiles.
+</p>
+<p>
+    The identified base profile is used and its race is replaced by all races available to this spec.
+</p>
+
+<pre>
+# SimulationCraft example override
+race=dwarf
+</pre>
