--- a/general_website/templates/general_website/chart_information/simulation_type/secondary_distributions.html
+++ b/general_website/templates/general_website/chart_information/simulation_type/secondary_distributions.html
@@ -1,1 +1,36 @@
 {% load i18n %}
+<h5>Secondary Distributions</h5>
+<p>
+    This chart shows how much power different distributions of secondary stats provide.
+</p>
+<p>
+    It uses the "tier appropriate"
+    <a href="https://github.com/simulationcraft/simc/tree/shadowlands/profiles">SimulationCraft profile</a>.
+    If the fight style is neither <code>patchwerk</code> nor <code>castingpatchwerk</code> a "tier appropriate"
+    <a href="https://github.com/Bloodmallet/bloodytools/tree/dev/fallback_profiles">fallback profile</a> is used to
+    improve the data quality. In a custom chart if the creator provided a profile, it replaces the formerly mentioned
+    profiles.
+</p>
+<p>
+    At first the available sum of secondary ratings is extracted from the profile. Then the secondary ratings are
+    redistributed. The lowest portion of secondary ratings per stat are 10%. Because we're dealing with 4 different
+    stats this means the highest concentration on a single stat can be 70% of the sum. The sum and parts of it are
+    always ratings, like the values on the items themselves.
+</p>
+<p>
+    Example: 2000 secondaries are available. One of the distributions uses 20% of the ratings for crit, 30% for haste,
+    40% for mastery, and the remaining 10% for versatility. This means 400 crit rating, 600 haste rating, 800 mastery
+    rating, and 200 versatility rating will be set in this profile.
+</p>
+
+<pre>
+# SimulatonCraft example override
+gear_crit_rating=400
+gear_haste_rating=600
+gear_mastery_rating=800
+gear_versatility_rating=200
+</pre>
+
+<p>
+    Setting ratings as described above does not affect stat procs. E.g. trinkets.
+</p>
