--- a/general_website/templates/general_website/chart_information/simulation_type/soul_binds.html
+++ b/general_website/templates/general_website/chart_information/simulation_type/soul_binds.html
@@ -1,1 +1,41 @@
 {% load i18n %}
+<h5>Soulbinds</h5>
+<p>
+    This chart shows how much power a full Soulbind offers.
+</p>
+<p>
+    It uses the "tier appropriate"
+    <a href="https://github.com/simulationcraft/simc/tree/shadowlands/profiles">SimulationCraft profile</a>.
+    If the fight style is neither <code>patchwerk</code> nor <code>castingpatchwerk</code> a "tier appropriate"
+    <a href="https://github.com/Bloodmallet/bloodytools/tree/dev/fallback_profiles">fallback profile</a> is used to
+    improve the data quality. In a custom chart if the creator provided a profile, it replaces the formerly mentioned
+    profiles.
+</p>
+<p>
+    If a Covenant Legendary is equipped, its effect is replaced by Unity. Non-Covenant Legendaries stay in the profile.
+    All possible fully filled Soulbind trees are generated and simulated. Conduits are used at max rank.
+</p>
+<p>
+    The best performing path through a tree is shown. The performance of the other paths is still available in the data.
+</p>
+
+<pre>
+# SimulatonCraft example override
+## Niya
+##   Grove Invigoration
+##   Niya's Tools: Poison
+##   Bonded Hearts
+##   Unruly Winds
+##   Focused Lightning
+##   Chilled to the Core
+covenant=night_fae
+soulbind=grove_invigoration/niyas_tools_poison/bonded_hearts/unruly_winds:11:1/focused_lightning:11:1/chilled_to_the_core:11:1
+</pre>
+<p>
+    Soulbind nodes can either use their spell id or as shown above their name in snake_case.
+</p>
+<p>
+    Conduits can either use their spell id or as shown above their name in snake_case, followed by a number defining its
+    rank, and followed by either a <code>1</code> to indicate an empowered conduit, or a <code>0</code> for a
+    not-empowered one.
+</p>
