--- a/general_website/templates/general_website/chart_information/simulation_type/tier_set.html
+++ b/general_website/templates/general_website/chart_information/simulation_type/tier_set.html
@@ -2,9 +2,9 @@
 <h5>Tier Sets</h5>
 <p>This chart shows how much power can be gained by adding Tier Set effects to a profile.</p>
 <p>
-    It uses the tier appropriate
+    It uses the "tier appropriate"
     <a href="https://github.com/simulationcraft/simc/tree/shadowlands/profiles">SimulationCraft profile</a>.
-    If the fight style is neither <code>patchwerk</code> nor <code>castingpatchwerk</code> a tier appropriate
+    If the fight style is neither <code>patchwerk</code> nor <code>castingpatchwerk</code> a "tier appropriate"
     <a href="https://github.com/Bloodmallet/bloodytools/tree/dev/fallback_profiles">fallback profile</a> is used to
     improve the data quality. In a custom chart if the creator provided a profile, it replaces the formerly mentioned
     profiles.
@@ -14,17 +14,19 @@
     based on this base profile, but in these profiles more and more bonuses are being activated. Because the same
     profile is used multiple times we can observe the dps gain the enabled tier set provides for this specific profile.
 </p>
+
 <pre>
-# disable the tier 28 two piece bonus
+# SimulationCraft example overrides
+## disable the tier 28 two piece bonus
 set_bonus=tier28_2pc=0
 
-# disable the tier 28 four piece bonus
+## disable the tier 28 four piece bonus
 set_bonus=tier28_4pc=0
 
-# enable the tier 28 two piece bonus
+## enable the tier 28 two piece bonus
 set_bonus=tier28_2pc=1
 
-# enable the tier 28 four piece bonus
+## enable the tier 28 four piece bonus
 set_bonus=tier28_4pc=1
 </pre>
 
