add disclaimer section
this one is a little more involved. otherwise it would require maaaany specific files

--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -283,6 +283,8 @@
     {% endif %} {# talents #}
 </div>
 
+{% include 'general_website/chart_information/class_and_spec_information_importer.html' %}
+
 <div id="chart" class="bloodmallet_chart mt-3" {% if general_result %} data-wow-class="{{ wow_class }}"
     data-wow-spec="{{ wow_spec }}" data-fight-style="{{ fight_style }}" data-type="{{ simulation_type }}" {% else %}
     data-chart-id="{{ chart_id }}" {% endif %} data-language="{{ LANGUAGE_CODE }}" data-entries="10000"
