--- a/general_website/templates/general_website/chart_information/disclaimers/tier_set_shaman_elemental.html
+++ b/general_website/templates/general_website/chart_information/disclaimers/tier_set_shaman_elemental.html
@@ -1,4 +1,4 @@
 <div class="alert alert-warning" role="alert">
-    Elemental Shamans Tier Set value looks bloated because this specific setup and play style <strong>ONLY</strong>
+    Elemental Shamans Tier Set value looks bloated because this specific setup/profile <strong>ONLY</strong>
     works with T28 4 piece bonus.
 </div>
