--- a/general_website/templates/general_website/layout/wowhead_tooltips.html
+++ b/general_website/templates/general_website/layout/wowhead_tooltips.html
@@ -1,16 +1,15 @@
 <script>
-const whTooltips = {
-    colorLinks: false,
-    //iconizeLinks: false,
-    iconizeLinks: true,
-    //iconSize: "small",
-    iconSize: true,
-    renameLinks: false,
-    hide: {
-        dropchance: true,
-        sellprice: true,
-        maxstack: true
-    }
-};
+    const whTooltips = {
+        colorLinks: false,
+        iconizeLinks: true,
+        iconSize: "small",
+        renameLinks: false,
+        hide: {
+            dropchance: true,
+            maxstack: true,
+            reagents: true,
+            sellprice: true,
+        }
+    };
 </script>
 <script src="https://wow.zamimg.com/widgets/power.js"></script>
