center talent tree

--- a/general_website/templates/general_website/talent_trees.html
+++ b/general_website/templates/general_website/talent_trees.html
@@ -15,7 +15,10 @@
     and feedback.
 </div>
 
-<div id="main" class="bloodmallets-talent-tree" data-wow-class="druid" data-wow-spec="balance" data-tree-type="class">
+<div class="btt-container">
+    <div id="main" class="bloodmallets-talent-tree" data-wow-class="druid" data-wow-spec="balance"
+        data-tree-type="class">
+    </div>
 </div>
 {% endblock %}
 
