--- a/general_website/static/general_website/css/talent_trees.css
+++ b/general_website/static/general_website/css/talent_trees.css
@@ -14,9 +14,18 @@
     --btt-fully-selected: orange;
 }
 
-div.bloodmallets-talent-tree {
+div.btt-container {
     width: 100%;
+    text-align: center;
+}
+
+div.bloodmallets-talent-tree {
+    width: calc(var(--btt-talent-columns) * var(--btt-box-size) + calc(var(--btt-talent-columns) - 1) * calc(var(--btt-box-size) / 5));
     /* min-width: 400px; */
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+    /* margin: 0 auto; */
     display: grid;
 
     /* grid-template: ; */
