--- a/general_website/static/general_website/css/talent_trees.css
+++ b/general_website/static/general_website/css/talent_trees.css
@@ -20,7 +20,7 @@ div.btt-container {
 }
 
 div.bloodmallets-talent-tree {
-    width: calc(var(--btt-talent-columns) * var(--btt-box-size) + calc(var(--btt-talent-columns) - 1) * calc(var(--btt-box-size) / 5));
+    width: calc(var(--btt-talent-columns) * calc(var(--btt-box-size) / 3 * 2) + calc(var(--btt-talent-columns) - 1) * calc(var(--btt-box-size) / 5));
     /* min-width: 400px; */
     margin-left: auto;
     margin-right: auto;
@@ -29,7 +29,7 @@ div.bloodmallets-talent-tree {
     display: grid;
 
     /* grid-template: ; */
-    grid-template-columns: repeat(var(--btt-talent-columns), var(--btt-box-size));
+    grid-template-columns: repeat(var(--btt-talent-columns), calc(var(--btt-box-size) / 3 * 2));
     grid-template-rows: repeat(var(--btt-talent-rows), var(--btt-box-size));
     row-gap: calc(var(--btt-box-size) / 4);
     column-gap: calc(var(--btt-box-size) / 5);
@@ -45,11 +45,13 @@ div.bloodmallets-talent-tree>div.btt-talent {
 
 div.btt-talent>div.btt-talent-rank {
     position: absolute;
+    width: 100%;
     bottom: 0px;
-    right: 0px;
-    text-align: right;
+    left: 0px;
+    /* right: 0px; */
+    text-align: center;
     /* offset-x | offset-y | blur-radius | color */
-    text-shadow: 0px 0px 2px black;
+    text-shadow: -1px 0 2px black, 0 1px 2px black, 1px 0 2px black, 0 -1px 2px black;
 }
 
 .btt-not-selected {
