--- a/general_website/templates/general_website/talent_trees.html
+++ b/general_website/templates/general_website/talent_trees.html
@@ -7,19 +7,24 @@
 
 <h1 class="display-4 mb-3 text-center" id="primary_headline">{% translate "Talent trees" %}</h1>
 
-<h2>Class tree Balance Druid</h2>
-
 <div class="alert alert-warning" role="alert">
     This website is under heavy development. Nevertheless please create <a
         href="https://github.com/Bloodmallet/bloodmallet_web_frontend/issues">issues on github</a> for feature requests
     and feedback.
 </div>
 
+<h2>Class tree: Balance Druid</h2>
 <div class="btt-container">
     <div id="main" class="bloodmallets-talent-tree" data-wow-class="druid" data-wow-spec="balance"
         data-tree-type="class">
     </div>
 </div>
+
+<div class="mt-3">
+    <button type="button" class="btn btn-lg btn-primary" disabled>Export /simc</button>
+    <button type="button" class="btn btn-lg btn-primary" disabled>Import /simc</button>
+</div>
+
 {% endblock %}
 
 {% block extraimport %}
