--- a/general_website/static/general_website/css/talent_trees.css
+++ b/general_website/static/general_website/css/talent_trees.css
@@ -135,3 +135,12 @@ div.btt-talent>div.btt-talent-rank {
     -webkit-clip-path: polygon(29% 0%, 71% 0%, 100% 29%, 100% 71%, 71% 100%, 29% 100%, 0% 71%, 0% 29%, 29% 0%);
     clip-path: polygon(29% 0%, 71% 0%, 100% 29%, 100% 71%, 71% 100%, 29% 100%, 0% 71%, 0% 29%, 29% 0%);
 }
+
+.btt-talent-name {
+    color: var(--btt-fully-selected);
+    font-weight: 700;
+}
+
+.tooltip>.tooltip-inner {
+    text-align: left;
+}
