--- a/general_website/templates/general_website/talent_trees.html
+++ b/general_website/templates/general_website/talent_trees.html
@@ -13,6 +13,20 @@
     and feedback.
 </div>
 
+<p>
+    TODO:
+</p>
+<ul>
+    <li>tooltips</li>
+    <li>choice nodes icons</li>
+    <li>choice nodes specific selection</li>
+    <li>availability indicator (white)</li>
+    <li>more tree data / icons</li>
+    <li>tree import (build your own tree)</li>
+    <li>export path</li>
+    <li>import path</li>
+</ul>
+
 <h2>Class tree: Balance Druid</h2>
 <div class="btt-container">
     <div id="main" class="bloodmallets-talent-tree" data-wow-class="druid" data-wow-spec="balance"
@@ -20,10 +34,10 @@
     </div>
 </div>
 
-<div class="mt-3">
+<!-- <div class="mt-3">
     <button type="button" class="btn btn-lg btn-primary" disabled>Export /simc</button>
     <button type="button" class="btn btn-lg btn-primary" disabled>Import /simc</button>
-</div>
+</div> -->
 
 {% endblock %}
 
