--- a/general_website/templates/general_website/talent_trees.html
+++ b/general_website/templates/general_website/talent_trees.html
@@ -17,7 +17,7 @@
     TODO:
 </p>
 <ul>
-    <li>tooltips</li>
+    <li><del>tooltips</del></li>
     <li>choice nodes icons</li>
     <li>choice nodes specific selection</li>
     <li>availability indicator (white)</li>
