visually hint at the interactive areas for the user

--- a/general_website/static/general_website/css/talent_trees.css
+++ b/general_website/static/general_website/css/talent_trees.css
@@ -37,6 +37,7 @@ div.bloodmallets-talent-tree>div.btt-talent {
     background-repeat: no-repeat;
     background-position: center;
     position: relative;
+    cursor: pointer;
     /* TODO: remove me */
     /* border: 1px solid black; */
 }
