--- a/general_website/templates/general_website/talent_trees.html
+++ b/general_website/templates/general_website/talent_trees.html
@@ -18,6 +18,8 @@
 </p>
 <ul>
     <li><del>tooltips</del></li>
+    <li>visualize gates</li>
+    <li>prevent removing points if gates depend on them</li>
     <li>choice nodes icons</li>
     <li>choice nodes specific selection</li>
     <li>availability indicator (white)</li>
