--- a/general_website/templates/general_website/talent_trees.html
+++ b/general_website/templates/general_website/talent_trees.html
@@ -18,7 +18,10 @@
 </p>
 <ul>
     <li><del>tooltips</del></li>
-    <li>visualize gates</li>
+    <li><del>visualize gates</del></li>
+    <li>clean up gates css</li>
+    <li>make gates dynamic</li>
+    <li>add gates to js</li>
     <li>prevent removing points if gates depend on them</li>
     <li>choice nodes icons</li>
     <li>choice nodes specific selection</li>
@@ -33,6 +36,12 @@
 <div class="btt-container">
     <div id="main" class="bloodmallets-talent-tree" data-wow-class="druid" data-wow-spec="balance"
         data-tree-type="class">
+        <div class="btt-gate-1">
+            <div class="btt-gate-line h3">8</div>
+        </div>
+        <div class="btt-gate-2">
+            <div class="btt-gate-line h3">20</div>
+        </div>
     </div>
 </div>
 
