--- a/general_website/templates/general_website/talent_trees.html
+++ b/general_website/templates/general_website/talent_trees.html
@@ -19,10 +19,11 @@
 <ul>
     <li><del>tooltips</del></li>
     <li><del>visualize gates</del></li>
-    <li>clean up gates css</li>
-    <li>make gates dynamic</li>
-    <li>add gates to js</li>
+    <li><del>clean up gates css</del></li>
+    <li><del>make gates dynamic</del></li>
+    <li><del>add gates to js</del></li>
     <li>prevent removing points if gates depend on them</li>
+    <li>tree reset button</li>
     <li>choice nodes icons</li>
     <li>choice nodes specific selection</li>
     <li>availability indicator (white)</li>
