--- a/general_website/templates/general_website/talent_trees.html
+++ b/general_website/templates/general_website/talent_trees.html
@@ -22,11 +22,12 @@
     <li><del>clean up gates css</del></li>
     <li><del>make gates dynamic</del></li>
     <li><del>add gates to js</del></li>
-    <li>prevent removing points if gates depend on them</li>
+    <li><del>prevent removing points if gates depend on them</del></li>
     <li>tree reset button</li>
     <li>choice nodes icons</li>
     <li>choice nodes specific selection</li>
     <li>availability indicator (white)</li>
+    <li>dynamic connector-color around gates</li>
     <li>more tree data / icons</li>
     <li>tree import (build your own tree)</li>
     <li>export path</li>
