--- a/general_website/templates/general_website/talent_trees.html
+++ b/general_website/templates/general_website/talent_trees.html
@@ -36,17 +36,13 @@
 
 <h2>Class tree: Balance Druid</h2>
 <div class="btt-container">
-    <div id="main" class="bloodmallets-talent-tree" data-wow-class="druid" data-wow-spec="balance"
+    <div id="main" class="bloodmallets-talent-tree mb-5" data-wow-class="druid" data-wow-spec="balance"
         data-tree-type="class">
     </div>
 </div>
 
-<!-- <div class="mt-3">
-    <button type="button" class="btn btn-lg btn-primary" disabled>Export /simc</button>
-    <button type="button" class="btn btn-lg btn-primary" disabled>Import /simc</button>
-</div> -->
 
-<h3>Data example</h3>
+<h3 class="mt-5">Data example</h3>
 <code>
 [
     {
